--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <title>Rodrigo's Personal Site</title>
   </head>
   <body>
-<h1> Rodrigo Lukojc </h1>
-
+    <main>
+<h1> Bienvenidos a mi sitio personal </h1>
+      <p> Rodrigo Lukojc </p>
+      <h2> Un poco acerca de mi </h2>
+    </main>
+     <h2> Un poco acerca de mi </h2>
+    <P> Soy tecnico superior en programacion, me especializo en el desarrollo web y me apasionan las nuevas tecnologias</p>
   </body>
 </html>
