--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
   <body>
     <main>
 <h1> Bienvenidos a mi sitio personal </h1>
-      <p> Rodrigo Lukojc </p>
-      <h2> Un poco acerca de mi </h2>
+      <h1> Soy Rodrigo Lukojc </h1>
+      <h2> Y les cuento un poco mas acerca de mi </h2>
     </main>
-     <h2> Un poco acerca de mi </h2>
     <P> Soy tecnico superior en programacion, me especializo en el desarrollo web y me apasionan las nuevas tecnologias</p>
   </body>
 </html>
