--- a/index.html
+++ b/index.html
@@ -7,9 +7,29 @@
   <body>
     <main>
 <h1> Bienvenidos a mi sitio personal </h1>
-      <h1> Soy Rodrigo Lukojc </h1>
-      <h2> Y les cuento un poco mas acerca de mi </h2>
+      <h2> Soy Rodrigo Lukojc </h2>
     </main>
+    <header>
+    <h3> Y les cuento un poco mas acerca de mi </h3>
     <P> Soy tecnico superior en programacion, me especializo en el desarrollo web y me apasionan las nuevas tecnologias</p>
+    </header>
+    <footer>
+      Redes sociales de Rodrigo:
+      <ul>
+        <li>Twitter<a href="https://twitter.com/rodrilukojc">@rodrilukojc</a></li>
+        <li>Instragram<a href="https://instagram.com/rodrilukojc">@rodrilukojc</a></li>
+      </ul>
+  
+      <p>
+        Email:
+        <a href="mailto:rodrigo.lukojc@gmail.com">
+          rodrigo.lukojc@gmail.com
+        </a>
+      </p>
+      <p>
+        Copyright 2020-2021 Rodrigo Lukojc. Todos los derechos reservados.
+      </p>
+    </footer>  
+  
   </body>
 </html>
